--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fastify/cors": "^10.1.0",
+    "@fastify/static": "^8.3.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@tanstack/react-query": "^5.85.5",
@@ -29,6 +31,7 @@
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fastify": "^5.6.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.447.0",
     "react": "^19.1.0",
@@ -38,9 +41,6 @@
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
-    "@fastify/cors": "^10.1.0",
-    "@fastify/static": "^8.3.0",
-    "fastify": "^5.6.0",
     "sql.js": "^1.13.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.2"
@@ -51,6 +51,10 @@
     "@testing-library/react": "^16.1.0",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.18",
+    "concurrently": "^9.2.1",
+    "electron": "^35.0.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -62,9 +66,6 @@
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.4",
     "vitest": "^3.2.4",
-    "concurrently": "^9.2.1",
-    "electron": "^35.0.0",
-    "electron-builder": "^26.0.12",
     "wait-on": "^8.0.4"
   },
   "build": {
